--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,5 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:17.0.0'
     implementation 'com.squareup.okhttp3:okhttp:4.5.0'
     implementation 'com.baoyz.swipemenulistview:library:1.3.0'
+    implementation 'com.j256.ormlite:ormlite-android:5.0'
 }
